# dash-sdk

./: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  build.bat  classblacklist.txt  configure  configure.ac  configure.ac.module  dash-sdk.pc.in  dash-sdk.spec.in  dashsdk.css  doxyfile  release.txt
cim_client_lib/: Makefile.am  Makefile.in
cim_client_lib/wsman/: Makefile.am  Makefile.in
cim_client_lib/wsman/include/wsman/: dashping.h  wsmanidentify.h
cim_client_lib/wsman/src/: args.c  array.c  cimcclient.c  client.c  constClass.c  dashping.c  datetime.c  enumeration.c  genericlist.c  instance.c  objectpath.c  property.c  qualifier.c  string.c  value.c  wsmanidentify.c
cim_client_lib/wsman/src/utils/: utilHashtable.c
cim_client_lib/wsman/windows/: win32port.h
cim_client_lib/wsman/windows/wsman_client_lib/: wsman_client_lib.sln  wsman_client_lib.vcproj
cim_mof/: CIM_Schema.mof  DRI_Schema.mof  ReleaseNotes.html  build.bat  cim-prepatch.mof  cim_schema_2.19.0.mof  dri.mof  qualifiers_extra.mof  update_dri.mof.bat
cli/: Makefile.am  Makefile.in  dashcli.1
cli/src/: cmdoption.h  dashcli.cpp  dashcli.h  discovery.cpp  discovery.h  eventviewer.cpp  eventviewer.h  exec.cpp  exec.h  help.cpp  help.h  indication.cpp  indication.h  raw.cpp  raw.h  targetpath.cpp  targetpath.h  version.dummy.h  version.h
cli/windows/dashcli/: dashcli.rc  dashcli.rc2  dashcli.sln  dashcli.vcproj  resource.h  version.bat
dash_client_lib/: Makefile.am  Makefile.in
dash_client_lib/include/: Makefile.am  Makefile.in
dash_client_lib/include/dsdk/: battery.h  biosmanagement.h  bootconfig.h  cimcapabilities.h  cimmap.h  client.h  computersystem.h  dhcpclient.h  discoverer.h  dnsclient.h  dsdk.h  dsdk_api.h  dsdkexception.h  dsdkiterator.h  dsdktypes.h  enumerator.h  errorcode.h  ethernetport.h  eventreceiver.h  eventsubscribe.h  fan.h  indications.h  ipinterface.h  memory.h  networkport.h  opaquemanagementdata.h  operatingsystem.h  physicalasset.h  powersupply.h  privilege.h  processor.h  registeredprofile.h  sensor.h  software.h  subject.h  textredirection.h  usbredirection.h  user.h  virtualmedia.h
dash_client_lib/include/dsdk/cim/: cimargument.h  cimarray.h  cimclasskeys.h  cimconstclass.h  cimconversion.h  cimdata.h  cimdatetime.h  cimenumeration.h  cimerror.h  ciminstance.h  cimobjectpath.h  cimstring.h  cimtypes.h  cimutils.h  cimvalue.h
dash_client_lib/source/: makeoal.bat
dash_client_lib/source/api/: apiimp.h  battery.cpp  biosmanagement.cpp  bootconfig.cpp  cimcapabilities.cpp  cimmap.cpp  computersystem.cpp  dhcpclient.cpp  discoverer.cpp  dnsclient.cpp  enumerator.cpp  enumeratortemplate.h  errorcode.c  ethernetport.cpp  eventreceiver.cpp  eventsubscribe.cpp  fan.cpp  indications.cpp  ipinterface.cpp  memory.cpp  networkport.cpp  opaquemanagementdata.cpp  operatingsystem.cpp  physicalasset.cpp  powersupply.cpp  privilege.cpp  processor.cpp  registeredprofile.cpp  sensor.cpp  software.cpp  subject.cpp  textredirection.cpp  usbredirection.cpp  user.cpp  virtualmedia.cpp
dash_client_lib/source/cim/: cimargument.cpp  cimarray.cpp  cimclasskeys.cpp  cimconstclass.cpp  cimdata.cpp  cimdatetime.cpp  cimenumeration.cpp  ciminstance.cpp  cimobjectpath.cpp  cimstring.cpp  cimvalue.cpp
dash_client_lib/source/client/: sfccclient.cpp  sfccclient.h
dash_client_lib/source/common/: COALObject.h  dsdk.cpp  util.h
dash_client_lib/windows/dashapi/: dashapi.sln  dashapi.vcproj
dash_client_libc/: Makefile.am  Makefile.in
dash_client_libc/include/: Makefile.am  Makefile.in
dash_client_libc/include/dsdkc/: battery_c.h  biosmanagement_c.h  bootconfig_c.h  capi.h  cimmap_c.h  computersystem_c.h  dhcpclient_c.h  discoverer_c.h  dnsclient_c.h  dsdk_c.h  error_c.h  ethernetport_c.h  eventreceiver_c.h  eventsubscribe_c.h  fan_c.h  ipinterface_c.h  memory_c.h  networkport_c.h  opaquemanagementdata_c.h  operatingsystem_c.h  physicalasset_c.h  powersupply_c.h  processor_c.h  registeredprofile_c.h  sensor_c.h  software_c.h  subject_c.h  textredirection_c.h  usbredirection_c.h  user_c.h  virtualmedia_c.h
dash_client_libc/source/: battery_c.cpp  biosmanagement_c.cpp  bootconfig_c.cpp  cimmap_c.cpp  computersystem_c.cpp  dhcpclient_c.cpp  discoverer_c.cpp  dnsclient_c.cpp  dsdk_c.cpp  error_c.cpp  ethernetport_c.cpp  eventreceiver_c.cpp  eventsubscribe_c.cpp  fan_c.cpp  ipinterface_c.cpp  memory_c.cpp  networkport_c.cpp  opaquemanagementdata_c.cpp  operatingsystem_c.cpp  physicalasset_c.cpp  powersupply_c.cpp  processor_c.cpp  registeredprofile_c.cpp  sensor_c.cpp  software_c.cpp  subject_c.cpp  textredirection_c.cpp  usbredirection_c.cpp  user_c.cpp  virtualmedia_c.cpp
dash_client_libc/windows/dashapic/: dashapic.vcproj
docs/: api.dox  build.dox  cli.dox  dashsdk.dox  (+14 more)
libs/eventsink/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  wseventsink.spec.in
libs/eventsink/include/: eventsink.h
libs/eventsink/lib/: Makefile.am  eventlistener.c  eventlistener.h  mongoose.c  mongoose.h
libs/eventsink/server/: Makefile.am  eventsink.c
libs/eventsink/windows/eventsink/: eventsink.sln  eventsink.vcproj
libs/openwsman/bindings/ruby/: Makefile.am  Makefile.in
libs/openwsman/bindings/ruby/openwsman/: Makefile.in
libs/openwsman/bindings/ruby/tests/: Makefile.in
libs/openwsman/etc/: Makefile.am  Makefile.in
libs/openwsman/etc/init/: Makefile.in
mof2oal/src/: Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  cimclass.cpp  cimclass.h  cimmethod.cpp  cimmethod.h  cimmof.l  cimmof.y  cimmof_lex.cpp  cimmof_tab.cpp  cimmof_tab.h  cimparameter.cpp  cimparameter.h  cimproperty.cpp  cimproperty.h  cimqualifier.h  cimreference.cpp  cimreference.h  config.h.in  configure  configure.in  mof2oal.cpp  skeleton.h  unistd.h  util.h
tools/ssl_client/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libtool
tools/ssl_client/src/: client.cpp  client.h  log.h  main.cpp  server.cpp  server.h  sslclient.cpp  sslclient.h  transport.cpp  transport.h
tools/ssl_client/windows/ssl_client/: ssl_client.sln  ssl_client.vcproj  winmain.cpp
(+1438 files in other folders)
